Implemented select for SQL GUI, fixed bugs

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1489,618
+ViewportPos=1590,1001
 ViewportId=0x59819E39
 Size=491,742
 Collapsed=1
@@ -15,39 +15,39 @@ Size=339,180
 Collapsed=0
 
 [Window][Settings]
-Pos=868,19
-Size=396,742
+Pos=819,19
+Size=412,581
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1264,761
+Size=1231,600
 Collapsed=0
 
 [Window][Viewport]
 Pos=0,19
 Size=969,742
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Tree Window]
 Pos=0,19
 Size=969,742
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][tree]
 Pos=0,19
 Size=987,742
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Trees]
 Pos=0,19
 Size=857,742
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Example: Assets Browser]
 Pos=137,241
@@ -87,9 +87,15 @@ Size=192,260
 
 [Window][Tables]
 Pos=0,19
-Size=866,742
+Size=817,476
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
+
+[Window][Select Table]
+Pos=0,497
+Size=817,103
+Collapsed=0
+DockId=0x00000004,0
 
 [Table][0x603C335E,2]
 Column 0  Weight=1.0000
@@ -217,7 +223,9 @@ Column 0  Width=4
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace   ID=0xC0DFADC4 Window=0xD0388BC8 Pos=223,184 Size=1264,742 Split=X
-  DockNode  ID=0x00000001 Parent=0xC0DFADC4 SizeRef=1522,742 CentralNode=1 Selected=0x7B8E2EAC
-  DockNode  ID=0x00000002 Parent=0xC0DFADC4 SizeRef=396,742 Selected=0x4746B4B8
+DockSpace     ID=0xC0DFADC4 Window=0xD0388BC8 Pos=685,173 Size=1231,581 Split=X
+  DockNode    ID=0x00000001 Parent=0xC0DFADC4 SizeRef=610,742 Split=Y Selected=0x7B8E2EAC
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=866,637 CentralNode=1 Selected=0x7B8E2EAC
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=866,103 Selected=0x450443CD
+  DockNode    ID=0x00000002 Parent=0xC0DFADC4 SizeRef=412,742 Selected=0x4746B4B8
 
