--- a/imgui.ini
+++ b/imgui.ini
@@ -1,231 +1,63 @@
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1264,761
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1590,1001
+ViewportPos=1821,246
 ViewportId=0x59819E39
-Size=491,742
-Collapsed=1
-
-[Window][Hello, world!]
-Pos=60,60
-Size=339,180
+Size=550,678
 Collapsed=0
 
 [Window][Settings]
-Pos=819,19
-Size=412,581
+Pos=868,19
+Size=396,742
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][DockSpace Demo]
-Pos=0,0
-Size=1231,600
-Collapsed=0
-
-[Window][Viewport]
-Pos=0,19
-Size=969,742
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Tree Window]
-Pos=0,19
-Size=969,742
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][tree]
-Pos=0,19
-Size=987,742
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Trees]
-Pos=0,19
-Size=857,742
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Example: Assets Browser]
-Pos=137,241
-Size=800,480
-Collapsed=0
-
-[Window][Example: Property editor]
-Pos=60,60
-Size=430,450
-Collapsed=0
-
-[Window][Example: Property editor/##tree_37EC733C]
-IsChild=1
-Size=300,415
-
-[Window][Delete?]
-Pos=476,328
-Size=311,105
-Collapsed=0
-
-[Window][Stacked 1]
-Pos=427,294
-Size=409,172
-Collapsed=0
-
-[Window][Dear ImGui Demo/##Basket_956142B6]
-IsChild=1
-Size=419,260
-
-[Window][Dear ImGui Demo/##Basket_87771727]
-IsChild=1
-Size=419,260
-
-[Window][Dear ImGui Demo/0_E1BADA21]
-IsChild=1
-Size=192,260
-
 [Window][Tables]
 Pos=0,19
-Size=817,476
+Size=866,366
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Select Table]
-Pos=0,497
-Size=817,103
+Pos=0,534
+Size=866,227
 Collapsed=0
 DockId=0x00000004,0
 
-[Table][0x603C335E,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+[Window][Batch]
+Pos=0,387
+Size=866,145
+Collapsed=0
+DockId=0x00000006,0
 
-[Table][0xA6C6558A,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
 
-[Table][0x51D6F5EA,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
+[Window][Example: Simple layout/left pane_244A9CDE]
+IsChild=1
+Size=150,386
 
-[Table][0xF1421304,3]
-RefScale=13
-Column 0  Width=63
-Column 1  Width=63
-Column 2  Weight=1.0000
-
-[Table][0xE212E0F0,6]
-RefScale=13
-Column 0  Width=63
-Column 1  Width=63
-Column 2  Width=-1
-Column 3  Weight=1.0000
-Column 4  Weight=1.0000
-Column 5  Weight=-1.0000
-
-[Table][0xEA44DE71,3]
-RefScale=13
-Column 0  Weight=1.0000
-Column 1  Width=84
-Column 2  Width=126
-
-[Table][0x3A20F3F3,3]
-RefScale=13
-Column 0  Width=56
-Column 1  Width=56
-Column 2  Width=56
-
-[Table][0x951FCC8A,6]
-RefScale=13
-Column 0  Width=28 Sort=0v
-Column 1  Width=42
-Column 2  Width=73
-Column 3  Width=68
-Column 4  Weight=1.0000
-Column 5  Width=-1
-
-[Table][0x6655AF53,4]
-RefScale=13
-Column 0  Width=28 Sort=0v
-Column 1  Width=42
-Column 2  Width=42
-Column 3  Weight=1.0000
-
-[Table][0xE102187A,3]
-RefScale=13
-Column 0  Width=63
-Column 1  Width=63
-Column 2  Width=63
-
-[Table][0x86C9FC97,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-
-[Table][0x95990F63,3]
-RefScale=13
-Column 0  Width=63
-Column 1  Width=63
-Column 2  Width=63
-
-[Table][0x369EB90F,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-
-[Table][0x2ACCE68A,3]
-RefScale=13
-Column 0  Width=86
-Column 1  Width=86
-Column 2  Width=86
-
-[Table][0xEB78AB2C,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-
-[Table][0x127BEAD2,7]
-RefScale=13
-Column 0  Width=49
-Column 1  Width=112
-Column 2  Width=112
-Column 3  Width=112
-Column 4  Width=112
-Column 5  Width=112
-Column 6  Width=112
-
-[Table][0x302651AD,14]
-RefScale=13
-Column 0  Width=56
-Column 1  Width=19
-Column 2  Width=19
-Column 3  Width=19
-Column 4  Width=19
-Column 5  Width=19
-Column 6  Width=19
-Column 7  Width=19
-Column 8  Width=19
-Column 9  Width=19
-Column 10 Width=19
-Column 11 Width=19
-Column 12 Width=19
-Column 13 Width=19
-
-[Table][0xB6880529,2]
-RefScale=13
-Column 0  Sort=0v
-
-[Table][0x2048C668,2]
-RefScale=13
-Column 0  Width=4
-Column 1  Weight=2.0000
+[Window][Example: Console]
+Pos=205,130
+Size=520,600
+Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0xC0DFADC4 Window=0xD0388BC8 Pos=685,173 Size=1231,581 Split=X
-  DockNode    ID=0x00000001 Parent=0xC0DFADC4 SizeRef=610,742 Split=Y Selected=0x7B8E2EAC
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=866,637 CentralNode=1 Selected=0x7B8E2EAC
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=866,103 Selected=0x450443CD
-  DockNode    ID=0x00000002 Parent=0xC0DFADC4 SizeRef=412,742 Selected=0x4746B4B8
+DockSpace       ID=0xC0DFADC4 Window=0xD0388BC8 Pos=108,150 Size=1264,742 Split=X
+  DockNode      ID=0x00000001 Parent=0xC0DFADC4 SizeRef=866,742 Split=Y Selected=0x7B8E2EAC
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=898,513 Split=Y Selected=0x7B8E2EAC
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=898,366 CentralNode=1 Selected=0x7B8E2EAC
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=898,145 Selected=0x21E44664
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=898,227 Selected=0x450443CD
+  DockNode      ID=0x00000002 Parent=0xC0DFADC4 SizeRef=396,742 Selected=0x4746B4B8
 
