--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1264,761
+Size=958,1000
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,32 +9,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1821,246
+ViewportPos=1588,341
 ViewportId=0x59819E39
 Size=550,678
-Collapsed=0
+Collapsed=1
 
 [Window][Settings]
-Pos=868,19
-Size=396,742
+Pos=524,19
+Size=434,981
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Tables]
 Pos=0,19
-Size=866,366
+Size=522,285
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][Select Table]
-Pos=0,534
-Size=866,227
+Pos=0,306
+Size=522,116
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Batch]
-Pos=0,387
-Size=866,145
+Pos=0,424
+Size=522,576
 Collapsed=0
 DockId=0x00000006,0
 
@@ -52,12 +52,47 @@ Pos=205,130
 Size=520,600
 Collapsed=0
 
+[Table][0x603C335E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA6C6558A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x127BEAD2,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0xAED4F161,3]
+RefScale=13
+Column 0  Width=108 Sort=0v
+Column 1  Width=63
+Column 2  Width=-1
+
+[Table][0x369EB90F,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x2ACCE68A,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
 [Docking][Data]
-DockSpace       ID=0xC0DFADC4 Window=0xD0388BC8 Pos=108,150 Size=1264,742 Split=X
-  DockNode      ID=0x00000001 Parent=0xC0DFADC4 SizeRef=866,742 Split=Y Selected=0x7B8E2EAC
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=898,513 Split=Y Selected=0x7B8E2EAC
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=898,366 CentralNode=1 Selected=0x7B8E2EAC
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=898,145 Selected=0x21E44664
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=898,227 Selected=0x450443CD
-  DockNode      ID=0x00000002 Parent=0xC0DFADC4 SizeRef=396,742 Selected=0x4746B4B8
+DockSpace       ID=0xC0DFADC4 Window=0xD0388BC8 Pos=961,50 Size=958,981 Split=X
+  DockNode      ID=0x00000001 Parent=0xC0DFADC4 SizeRef=522,742 Split=Y Selected=0x7B8E2EAC
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=898,403 Split=Y Selected=0x7B8E2EAC
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=842,285 CentralNode=1 Selected=0x7B8E2EAC
+      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=842,116 Selected=0x450443CD
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=898,576 Selected=0x21E44664
+  DockNode      ID=0x00000002 Parent=0xC0DFADC4 SizeRef=434,742 Selected=0x4746B4B8
 
